# propensity_calibration

./: .gitignore  README.md  RunSimulation.py  RunSynthetic.py  acic42_1_sig.pkl  acic42_2_sig.pkl  acic42_3_sig.pkl  acic42_4_sig.pkl  acic42_5_sig.pkl  calib_df_before_smd.csv  final_42_df.csv  make_graphs_for_paper.py  models.pkl  nested_acis_42_sig.csv  new_simulation.csv  prop_simulation.ipynb  pyproject.toml  requirements.txt  temp_df_42_nested_sig.csv  test_df_42_nested_sig.csv  utils.py
data/: var1_1.csv  var1_10.csv  var1_2.csv  var1_3.csv  var1_4.csv  var1_5.csv  var1_6.csv  var1_7.csv  var1_8.csv  var1_9.csv  var3_1.csv  var42_1.csv  var42_2.csv  var42_3.csv  var42_4.csv  var42_5.csv  var4_1.csv  var4_2.csv  var4_3.csv  var4_4.csv  var4_5.csv  var4_6.csv  var4_7.csv  var4_8.csv
models_test/: acic42_1_new_sig.pkl  acic42_1_sig.pkl  acic42_1_sig.pkl copy  acic42_1_sig_new.pkl  acic42_2_new_sig.pkl  acic42_2_sig.pkl  acic42_2_sig.pkl copy  acic42_2_sig_new.pkl  acic42_3_new_sig.pkl  acic42_3_sig.pkl  acic42_3_sig.pkl copy  acic42_3_sig_new.pkl  acic42_4_new_sig.pkl  acic42_4_sig.pkl copy  acic42_4_sig_new.pkl  acic42_5_new_sig.pkl  acic42_5_sig.pkl  acic42_5_sig.pkl copy  acic42_5_sig_new.pkl  models.pkl  nested_sig_with_lr.csv
replot/: extended_fig1_views.ipynb  main_figures.ipynb  simulation_df.csv
