[tool.poetry]
name = "propensity"
version = "0.2.0"
description = ""
authors = ["romgutman <rom.gutman1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.1"
scipy = "^1.8.0"
sklearn = "scikit-learn"
scikit-learn = "^1.0.2"
statsmodels = "^0.13.2"
tqdm = "^4.63.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
causallib = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.4"
mknotebooks = "^0.7.1"
mkdocstrings = "^0.18.1"
jupyter = "^1.0.0"
seaborn = "^0.11.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
